plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.cyclonedx.bom' version '2.3.0' apply false
}

allprojects {
    group = 'com.mopl'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
        implementation 'org.springframework.boot:spring-boot-starter-cache'

        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'com.nimbusds:nimbus-jose-jwt:10.3'

        implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
        annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
        annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
        annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

        implementation 'org.mapstruct:mapstruct:1.6.3'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
        annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

        implementation 'org.springframework.boot:spring-boot-starter-actuator'

        implementation 'org.springframework.retry:spring-retry'

        implementation 'com.github.f4b6a3:uuid-creator:6.1.1'

        implementation 'org.springframework.kafka:spring-kafka'

        runtimeOnly 'com.h2database:h2'
        runtimeOnly 'org.postgresql:postgresql'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}